[package]
name = "warp-template"
version = "0.1.0"
authors = ["Aleks Pickle <aleks.work2222@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
bytes = "0.5"
log = "0.4"
pretty_env_logger = "0.4"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
serde = "1.0.114"
serde_derive = "1.0.114"
anyhow = "*"