[package]
name = "actix-template"
version = "0.1.0"
authors = ["Aleks Pickle <aleks.work2222@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.0.0"
actix-service = "1.0.0"

bytes = "0.5.2"
futures = "0.3.1"
env_logger = "0.7"
log = "0.4"

serde_derive = "1.0.114"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json = "0.12"
anyhow = "1.0.31"